<resources>
    <string name="app_name">WedlogApp</string>
    <string name="todo">TODO</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_uup_to_start_your_new_journey">Sign uup to start your new journey.</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="female">Female</string>
    <string name="rather_not_say">Rather Not Say</string>
    <string name="i_have_read_all_terms_and_conditions">I have read all terms and conditions.</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="already_have_account_login">Already Have Account ? Login</string>
    <string name="male">Male</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="login">LOGIN</string>
    <string name="new_here_please_create_account">New Here! Please Create Account</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_halls">Halls</string>
    <string name="title_event_management">Event Management</string>
    <string name="title_transportation">Transportation</string>
    <string name="title_profile">Profile</string>
    <string name="title_orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_hall_orders">Hall Orders</string>
    <string name="title_event_orders">Event Orders</string>
    <string name="hall_name">Hall Name</string>
    <string name="hall_service">Hall Service</string>
    <string name="text_create_hall">Create Hall</string>
    <string name="text_add">Add</string>
    <string name="hall_location">Hall Location/Address</string>
    <string name="dish_name">Dish Name</string>
    <string name="per_head">Per Head</string>
    <string name="dish_description">Dsih Description</string>
    <string name="dish_details">Dish Details</string>
    <string name="title_logout">Logout</string>
    <string name="check_hall_availability_and_book">Check hall availability and book.</string>
    <string name="booking_date">Booking Date</string>
    <string name="event_type">Event Type</string>
    <string name="check_vendor_availability_and_order">Check Vendor availability and order.</string>
    <string name="vendor_event_name" />

</resources>