<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorApp"
        android:padding="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@mipmap/app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sign_uup_to_start_your_new_journey"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:hint="@string/username"
                app:endIconMode="clear_text"
                app:hintTextColor="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:hintTextColor="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                app:endIconMode="clear_text"
                app:hintTextColor="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                app:endIconMode="clear_text"
                app:hintTextColor="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/termsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/i_have_read_all_terms_and_conditions"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:text="@string/create_your_account"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:padding="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnAlreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_account_login"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>