<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_halls">

    <fragment
        android:id="@+id/navigation_halls"
        android:name="com.example.wedlogapp.activities.ui.halls.HallsFragment"
        android:label="@string/title_halls"
        tools:layout="@layout/fragment_halls" />

    <fragment
        android:id="@+id/navigation_event_management"
        android:name="com.example.wedlogapp.activities.ui.event_management.EventManagementFragment"
        android:label="@string/title_event_management"
        tools:layout="@layout/fragment_event_management" />

    <fragment
        android:id="@+id/navigation_transportation"
        android:name="com.example.wedlogapp.activities.ui.transportation.TransportationFragment"
        android:label="@string/title_transportation"
        tools:layout="@layout/fragment_transportation" />

</navigation>