<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_vendor_availability_and_order" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date Format (2022-1-1)" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/booking_date"
        android:hint="@string/booking_date"
        app:endIconMode="clear_text"
        app:hintTextColor="#000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputBookingDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/event_type"
        android:hint="@string/event_type"
        app:endIconMode="clear_text"
        app:hintTextColor="#000000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnOrderEventVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Book" />

</LinearLayout>