<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorApp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/placeholder"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:hint="@string/username"
                app:endIconMode="clear_text"
                app:hintTextColor="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:hintTextColor="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/phone_number"
                android:hint="@string/phone_number"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/address"
                android:hint="@string/address"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:text="Update"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:padding="10dp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
